syntax = "proto3";

package products;

// ===== COMMON =====

message Empty {}

message PaginationRequest {
  int32 page = 1;
  int32 limit = 2;
  string sort_by = 3;
  string sort_order = 4;
}

message PaginationResponse {
  int32 total = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 total_pages = 4;
}

// ===== GAMME (Product Range/Category) =====

message Gamme {
  string id = 1;
  string organisation_id = 2;
  string nom = 3;
  string description = 4;
  string icone = 5;
  string code = 6;
  int32 ordre = 7;
  bool actif = 8;
  string created_at = 9;
  string updated_at = 10;
}

message CreateGammeRequest {
  string organisation_id = 1;
  string nom = 2;
  string description = 3;
  string icone = 4;
  string code = 5;
  int32 ordre = 6;
}

message UpdateGammeRequest {
  string id = 1;
  optional string nom = 2;
  optional string description = 3;
  optional string icone = 4;
  optional string code = 5;
  optional int32 ordre = 6;
  optional bool actif = 7;
}

message GetGammeRequest {
  string id = 1;
}

message ListGammesRequest {
  string organisation_id = 1;
  optional bool actif = 2;
  PaginationRequest pagination = 3;
}

message ListGammesResponse {
  repeated Gamme gammes = 1;
  PaginationResponse pagination = 2;
}

message DeleteGammeRequest {
  string id = 1;
}

message DeleteGammeResponse {
  bool success = 1;
}

// ===== PRODUIT =====

enum TypeProduit {
  TYPE_PRODUIT_UNSPECIFIED = 0;
  INTERNE = 1;
  PARTENAIRE = 2;
}

enum CategorieProduit {
  CATEGORIE_PRODUIT_UNSPECIFIED = 0;
  ASSURANCE = 1;
  PREVOYANCE = 2;
  EPARGNE = 3;
  SERVICE = 4;
  ACCESSOIRE = 5;
}

message Produit {
  string id = 1;
  string organisation_id = 2;
  string gamme_id = 3;
  string sku = 4;
  string nom = 5;
  string description = 6;
  CategorieProduit categorie = 7;
  TypeProduit type = 8;
  double prix = 9;
  double taux_tva = 10;
  string devise = 11;
  bool actif = 12;
  bool promotion_active = 13;
  double prix_promotion = 14;
  string date_debut_promotion = 15;
  string date_fin_promotion = 16;
  string image_url = 17;
  string code_externe = 18;
  string metadata = 19;
  string created_at = 20;
  string updated_at = 21;
  // Relations
  Gamme gamme = 22;
}

message CreateProduitRequest {
  string organisation_id = 1;
  string gamme_id = 2;
  string sku = 3;
  string nom = 4;
  string description = 5;
  CategorieProduit categorie = 6;
  TypeProduit type = 7;
  double prix = 8;
  double taux_tva = 9;
  string devise = 10;
  string image_url = 11;
  string code_externe = 12;
  string metadata = 13;
}

message UpdateProduitRequest {
  string id = 1;
  optional string gamme_id = 2;
  optional string sku = 3;
  optional string nom = 4;
  optional string description = 5;
  optional CategorieProduit categorie = 6;
  optional TypeProduit type = 7;
  optional double prix = 8;
  optional double taux_tva = 9;
  optional string devise = 10;
  optional bool actif = 11;
  optional string image_url = 12;
  optional string code_externe = 13;
  optional string metadata = 14;
}

message GetProduitRequest {
  string id = 1;
}

message GetProduitBySkuRequest {
  string organisation_id = 1;
  string sku = 2;
}

message ListProduitsRequest {
  string organisation_id = 1;
  optional string gamme_id = 2;
  optional CategorieProduit categorie = 3;
  optional TypeProduit type = 4;
  optional bool actif = 5;
  optional bool promotion_active = 6;
  optional string search = 7;
  PaginationRequest pagination = 8;
}

message ListProduitsResponse {
  repeated Produit produits = 1;
  PaginationResponse pagination = 2;
}

message DeleteProduitRequest {
  string id = 1;
}

message DeleteProduitResponse {
  bool success = 1;
}

// Promotion
message SetPromotionRequest {
  string produit_id = 1;
  double prix_promotion = 2;
  string date_debut = 3;
  string date_fin = 4;
}

message ClearPromotionRequest {
  string produit_id = 1;
}

// ===== GRILLE TARIFAIRE (Pricing Grid) =====

message GrilleTarifaire {
  string id = 1;
  string organisation_id = 2;
  string nom = 3;
  string description = 4;
  string date_debut = 5;
  string date_fin = 6;
  bool est_par_defaut = 7;
  bool actif = 8;
  string created_at = 9;
  string updated_at = 10;
  // Relations
  repeated PrixProduit prix_produits = 11;
}

message CreateGrilleTarifaireRequest {
  string organisation_id = 1;
  string nom = 2;
  string description = 3;
  string date_debut = 4;
  string date_fin = 5;
  bool est_par_defaut = 6;
}

message UpdateGrilleTarifaireRequest {
  string id = 1;
  optional string nom = 2;
  optional string description = 3;
  optional string date_debut = 4;
  optional string date_fin = 5;
  optional bool est_par_defaut = 6;
  optional bool actif = 7;
}

message GetGrilleTarifaireRequest {
  string id = 1;
}

message GetGrilleTarifaireActiveRequest {
  string organisation_id = 1;
  string date = 2;
}

message ListGrillesTarifairesRequest {
  string organisation_id = 1;
  optional bool actif = 2;
  optional bool est_par_defaut = 3;
  PaginationRequest pagination = 4;
}

message ListGrillesTarifairesResponse {
  repeated GrilleTarifaire grilles = 1;
  PaginationResponse pagination = 2;
}

message DeleteGrilleTarifaireRequest {
  string id = 1;
}

message DeleteGrilleTarifaireResponse {
  bool success = 1;
}

message SetGrilleParDefautRequest {
  string id = 1;
}

// ===== PRIX PRODUIT (Product Price in Grid) =====

message PrixProduit {
  string id = 1;
  string grille_tarifaire_id = 2;
  string produit_id = 3;
  double prix_unitaire = 4;
  double remise_pourcent = 5;
  double prix_minimum = 6;
  double prix_maximum = 7;
  bool actif = 8;
  string created_at = 9;
  string updated_at = 10;
  // Relations
  Produit produit = 11;
  GrilleTarifaire grille_tarifaire = 12;
}

message CreatePrixProduitRequest {
  string grille_tarifaire_id = 1;
  string produit_id = 2;
  double prix_unitaire = 3;
  double remise_pourcent = 4;
  double prix_minimum = 5;
  double prix_maximum = 6;
}

message UpdatePrixProduitRequest {
  string id = 1;
  optional double prix_unitaire = 2;
  optional double remise_pourcent = 3;
  optional double prix_minimum = 4;
  optional double prix_maximum = 5;
  optional bool actif = 6;
}

message GetPrixProduitRequest {
  string id = 1;
}

message GetPrixForProduitRequest {
  string grille_tarifaire_id = 1;
  string produit_id = 2;
}

message ListPrixProduitsRequest {
  string grille_tarifaire_id = 1;
  optional string produit_id = 2;
  optional bool actif = 3;
  PaginationRequest pagination = 4;
}

message ListPrixProduitsResponse {
  repeated PrixProduit prix_produits = 1;
  PaginationResponse pagination = 2;
}

message DeletePrixProduitRequest {
  string id = 1;
}

message DeletePrixProduitResponse {
  bool success = 1;
}

// Bulk operations
message BulkCreatePrixProduitsRequest {
  string grille_tarifaire_id = 1;
  repeated CreatePrixProduitItem items = 2;
}

message CreatePrixProduitItem {
  string produit_id = 1;
  double prix_unitaire = 2;
  double remise_pourcent = 3;
  double prix_minimum = 4;
  double prix_maximum = 5;
}

message BulkCreatePrixProduitsResponse {
  repeated PrixProduit created = 1;
  int32 count = 2;
}

// ===== CATALOG SERVICE (Unified operations) =====

message GetCatalogRequest {
  string organisation_id = 1;
  optional string grille_tarifaire_id = 2;
  optional string gamme_id = 3;
  optional bool include_inactive = 4;
}

message CatalogItem {
  Produit produit = 1;
  PrixProduit prix = 2;
  double prix_final = 3;
  bool en_promotion = 4;
}

message GetCatalogResponse {
  repeated CatalogItem items = 1;
  GrilleTarifaire grille_utilisee = 2;
}

message CalculatePriceRequest {
  string produit_id = 1;
  string grille_tarifaire_id = 2;
  int32 quantite = 3;
  double remise_additionnelle = 4;
}

message CalculatePriceResponse {
  double prix_unitaire = 1;
  double prix_apres_remise = 2;
  double prix_total_ht = 3;
  double tva = 4;
  double prix_total_ttc = 5;
  bool promotion_appliquee = 6;
}

// ===== SERVICES =====

service GammeService {
  rpc Create(CreateGammeRequest) returns (Gamme);
  rpc Update(UpdateGammeRequest) returns (Gamme);
  rpc Get(GetGammeRequest) returns (Gamme);
  rpc List(ListGammesRequest) returns (ListGammesResponse);
  rpc Delete(DeleteGammeRequest) returns (DeleteGammeResponse);
}

service ProduitService {
  rpc Create(CreateProduitRequest) returns (Produit);
  rpc Update(UpdateProduitRequest) returns (Produit);
  rpc Get(GetProduitRequest) returns (Produit);
  rpc GetBySku(GetProduitBySkuRequest) returns (Produit);
  rpc List(ListProduitsRequest) returns (ListProduitsResponse);
  rpc Delete(DeleteProduitRequest) returns (DeleteProduitResponse);
  rpc SetPromotion(SetPromotionRequest) returns (Produit);
  rpc ClearPromotion(ClearPromotionRequest) returns (Produit);
}

service GrilleTarifaireService {
  rpc Create(CreateGrilleTarifaireRequest) returns (GrilleTarifaire);
  rpc Update(UpdateGrilleTarifaireRequest) returns (GrilleTarifaire);
  rpc Get(GetGrilleTarifaireRequest) returns (GrilleTarifaire);
  rpc GetActive(GetGrilleTarifaireActiveRequest) returns (GrilleTarifaire);
  rpc List(ListGrillesTarifairesRequest) returns (ListGrillesTarifairesResponse);
  rpc Delete(DeleteGrilleTarifaireRequest) returns (DeleteGrilleTarifaireResponse);
  rpc SetParDefaut(SetGrilleParDefautRequest) returns (GrilleTarifaire);
}

service PrixProduitService {
  rpc Create(CreatePrixProduitRequest) returns (PrixProduit);
  rpc Update(UpdatePrixProduitRequest) returns (PrixProduit);
  rpc Get(GetPrixProduitRequest) returns (PrixProduit);
  rpc GetForProduit(GetPrixForProduitRequest) returns (PrixProduit);
  rpc List(ListPrixProduitsRequest) returns (ListPrixProduitsResponse);
  rpc Delete(DeletePrixProduitRequest) returns (DeletePrixProduitResponse);
  rpc BulkCreate(BulkCreatePrixProduitsRequest) returns (BulkCreatePrixProduitsResponse);
}

service CatalogService {
  rpc GetCatalog(GetCatalogRequest) returns (GetCatalogResponse);
  rpc CalculatePrice(CalculatePriceRequest) returns (CalculatePriceResponse);
}
